# fastapi_demo_project

./: .env.example  README.md  alembic.ini  pyproject.toml
app/: config.py  main.py
app/controllers/v1/: __init__.py  user_controller.py
app/db/: base.py  models.py
app/dtos/requests/: contact_details.py  users.py
app/dtos/responses/: users.py
app/migrations/: env.py
app/migrations/versions/: d3aa763b58ea_init_migration.py  db697d7301d9_init.py
app/repositories/: base.py  base_repository.py  contact_details_repository.py  user_repository.py  users.py
app/services/: user_service.py
